2012-09-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3467508.c:
	  Regression test for bug #3467508.

2012-09-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #3467508

2012-09-26 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/cinc2h.pl: added,
	  thanks to Molnar Karoly

2012-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asrab/rabbitext.c: removed
	* sdas/asrab/rabbit.h,    sdas/asrab/rab.h,
	* sdas/asrab/rabbitadr.c, sdas/asrab/rabadr.c,
	* sdas/asrab/rabbitmch.c, sdas/asrab/rabmch.c,
	* sdas/asrab/rabbitpst.c, sdas/asrab/rabpst.c: renamed
	* sdas/asrab/asrab.vcxproj,
	* sdas/asrab/asrab.vcxproj.filters,
	* sdas/asrab/Makefile.in: updated
	* sdas/as6808/m08pst.c,
	* sdas/as8051/i51pst.c,
	* sdas/asgb/gbpst.c,
	* sdas/asrab/rabpst.c,
	* sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asxxxx.h: next small steps towards ASxxxx v5

2012-09-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodePostInc/Dec, geniCodePreInc/Dec):
	fixed bug #3511511
	* support/regression/tests/gcc-tortute-execute-950426-1.c:
	re-enabled

2012-09-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asdbg.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/assym.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/assubr.c,
	* sdas/asxxsrc/asxxxx.h: next small steps towards ASxxxx v5

2012-09-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asz80/Makefile.in,
	* sdas/asz80/as_z80.vcxproj,
	* sdas/asz80/as_z80.vcxproj.filters,
	* sdas/asz80/z80ext.c: removed z80ext.c
	* sdas/as8051/i51mch.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asz80/z80.h,
	* sdas/asz80/z80mch.c: small step towards ASxxxx v5

2012-09-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/pic16/glue.c (pic16_initPointer): fixed pointer initialization
	from address of struct/union
